fixed tests with module-info, improved single/nullable implementations